# DfsOpt

./: CMakeLists.txt  README.md
sample-inputs/: week7-2022-large.xml  week7-2022-required-players.xml  week7-2022-small.xml  week8-2022-tb-bal-captain.xml
src/: CMakeLists.txt  DfsOpt.hpp  DfsOpt_Main.cpp  DfsOpt_Outputter.cpp  DfsOpt_Outputter.hpp  DfsOpt_ProblemData.hpp  DfsOpt_Solver.cpp  DfsOpt_Solver.hpp  DfsOpt_XmlParser.cpp  DfsOpt_XmlParser.hpp
test/: CMakeLists.txt
test/outputter/: CMakeLists.txt  OutputterTest.cpp  captain-mode-dst.txt.gold  captain-mode.txt.gold  fewer-num-requested.txt.gold  num-requested.txt.gold
test/parser/: CMakeLists.txt  ParserTest.cpp  captain-mode-nonflex.xml  captain-mode-req-players.xml  captain-mode.xml  ill-formed.xml  missing-dst-attr.xml  missing-player-attr.xml  missing-reqs.xml  negative-cost.xml  negative-points.xml  sanity-check-flex.xml  sanity-check-qbs.xml  sanity-check-req-flex.xml  sanity-check-req-qbs.xml  successful-parse-req-players.xml  successful-parse.xml
test/solver/: CMakeLists.txt  SolverTest.cpp
